required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (SVN Trunk):
---------------------------

- WMS: Add svg as a supported format for GetMap request (#1347)

- WMS : Correct WMS time overriding Filter paramter (#1261)

- Fix problem with LUT scaling ranges with explicit value for 255 (#2167).

- WCS : Fixed resampling/reprojecting for tileindex datasets (#2180)

- Fixed formatting of configure --help (#2182)

- Fixed AGG configure option to use 'test -f' instead of 'test -e' which
  doesn't work on Solaris (#2183)

- Fixed mapwms.c to support selecting AGG/ outputformats via FORMAT=.


Version 5.0.0-beta1 (2007-07-25)
--------------------------------

New features in 5.0:

- MS RFC 19: Added Style and Label attribute binding

- MS RFC 21: Raster Color Correction via color lookup table

- MS RFC 27: Added label priority

- MS RFC 29: Added dynamic charting (pie and bar charts)

- MS RFC 31: New mechanism to load/set objects via URL using mapfile syntax

- MS RFC 32: Added support for map rendering using the AGG library for 
  better output quality


Long time issues resolved in 5.0:

- MS RFC 17: Use dynamic allocation for symbols, layers, classes and styles
  (got rid of the static limit on the number of instances of each in a map)

- MS RFC 24: Improved memory management and garbage collection for MapScript

- MS RFC 26: Terminology cleanup (layer transparency renamed to opacity,
  scale becomes scaledenom, symbol style becomes symbol pattern)

- MS RFC 28: Enhanced the debug/logging mechanism to facilitate 
  troubleshooting and tuning applications. Added support for multiple 
  debug levels and more control on output location.


Other fixes/enhancements in this beta:
